--- a/TestPrjAttract/Base.lproj/Main.storyboard
+++ b/TestPrjAttract/Base.lproj/Main.storyboard
@@ -86,11 +86,43 @@
                     <navigationItem key="navigationItem" title="Heroes" id="rdE-M6-LEH"/>
                     <connections>
                         <outlet property="tableView" destination="Cjq-fn-XXc" id="1V6-mz-KwM"/>
+                        <segue destination="j5p-S6-bCA" kind="show" identifier="segue" id="etq-ty-dRG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="964" y="134"/>
+        </scene>
+        <!--Detail-->
+        <scene sceneID="tmZ-VM-OzW">
+            <objects>
+                <viewController id="j5p-S6-bCA" customClass="DetailViewController" customModule="TestPrjAttract" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="e7h-bb-7J8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKq-h7-9NL">
+                                <rect key="frame" x="166.5" y="355" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="dKq-h7-9NL" firstAttribute="centerY" secondItem="VHo-ve-cFU" secondAttribute="centerY" id="VRM-Id-3GK"/>
+                            <constraint firstItem="dKq-h7-9NL" firstAttribute="centerX" secondItem="VHo-ve-cFU" secondAttribute="centerX" id="dUx-WX-4jz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="VHo-ve-cFU"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Detail" largeTitleDisplayMode="never" id="kNU-ow-jRJ"/>
+                    <connections>
+                        <outlet property="descriptionLabel" destination="dKq-h7-9NL" id="1WU-gk-JB2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O0X-lL-ujt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1810" y="134"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="UeJ-Op-Fkg">
