--- a/TestPrjAttract/iPad.storyboard
+++ b/TestPrjAttract/iPad.storyboard
@@ -21,9 +21,14 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="n5q-iO-bCY">
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="swS-Ko-GaZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="120" id="s0n-8W-Rfn" customClass="CustomCell" customModule="TestPrjAttract" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="768" height="120"/>
+                                        <rect key="frame" x="0.0" y="72" width="768" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="s0n-8W-Rfn" id="gaL-Nz-dju">
                                             <rect key="frame" x="0.0" y="0.0" width="735" height="119.5"/>
@@ -85,6 +90,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Heroes" id="9Ac-24-BOQ"/>
                     <connections>
+                        <outlet property="searchBar" destination="swS-Ko-GaZ" id="sYg-BS-81Q"/>
                         <outlet property="tableView" destination="n5q-iO-bCY" id="FnR-W5-8pz"/>
                         <segue destination="gfW-v8-aHn" kind="show" identifier="segue" id="44n-tj-UwF"/>
                     </connections>
@@ -403,6 +409,6 @@
         <image name="settings" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="nfu-re-bbF"/>
+        <segue reference="BTF-KD-F9T"/>
     </inferredMetricsTieBreakers>
 </document>
