--- a/TestPrjAttract/Base.lproj/iPhone.storyboard
+++ b/TestPrjAttract/Base.lproj/iPhone.storyboard
@@ -264,8 +264,69 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hwD-uL-4Wd">
+                                <rect key="frame" x="0.0" y="64" width="375" height="350"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="350" id="ThO-A0-vgE"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JnX-Ik-51Y">
+                                    <size key="itemSize" width="300" height="340"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="NRl-qI-8Nm">
+                                        <rect key="frame" x="0.0" y="5" width="300" height="340"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="340"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PNN-oK-uqD">
+                                                    <rect key="frame" x="20" y="20" width="260" height="220"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="260" id="ENr-9x-22i"/>
+                                                        <constraint firstAttribute="height" constant="220" id="p1x-Fg-KaD"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R09-io-HFk">
+                                                    <rect key="frame" x="247" y="304" width="36" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RiT-iS-0qw">
+                                                    <rect key="frame" x="20" y="299" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJz-DF-qJr">
+                                                    <rect key="frame" x="20" y="257" width="50" height="26"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="RiT-iS-0qw" firstAttribute="leading" secondItem="NRl-qI-8Nm" secondAttribute="leadingMargin" constant="12" id="67i-yp-944"/>
+                                            <constraint firstItem="fJz-DF-qJr" firstAttribute="leading" secondItem="NRl-qI-8Nm" secondAttribute="leadingMargin" constant="12" id="8Ez-C5-Vpp"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="R09-io-HFk" secondAttribute="trailing" constant="9" id="EuJ-md-ODb"/>
+                                            <constraint firstItem="RiT-iS-0qw" firstAttribute="top" secondItem="fJz-DF-qJr" secondAttribute="bottom" constant="16" id="QNp-5f-K7Y"/>
+                                            <constraint firstItem="PNN-oK-uqD" firstAttribute="top" secondItem="NRl-qI-8Nm" secondAttribute="top" constant="20" id="S5g-Hi-9Q0"/>
+                                            <constraint firstItem="fJz-DF-qJr" firstAttribute="top" secondItem="PNN-oK-uqD" secondAttribute="bottom" constant="17" id="UwD-Fm-OS2"/>
+                                            <constraint firstAttribute="trailing" secondItem="PNN-oK-uqD" secondAttribute="trailing" constant="20" id="eIt-ag-wJB"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="R09-io-HFk" secondAttribute="bottom" constant="11" id="qQ9-Lg-IeH"/>
+                                            <constraint firstItem="PNN-oK-uqD" firstAttribute="leading" secondItem="NRl-qI-8Nm" secondAttribute="leading" constant="20" id="san-bL-XYu"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKq-h7-9NL">
-                                <rect key="frame" x="166.5" y="355" width="42" height="21"/>
+                                <rect key="frame" x="166.5" y="484" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -273,7 +334,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="dKq-h7-9NL" firstAttribute="centerY" secondItem="VHo-ve-cFU" secondAttribute="centerY" id="VRM-Id-3GK"/>
+                            <constraint firstItem="hwD-uL-4Wd" firstAttribute="top" secondItem="VHo-ve-cFU" secondAttribute="top" id="2Bt-g9-mRU"/>
+                            <constraint firstItem="hwD-uL-4Wd" firstAttribute="trailing" secondItem="VHo-ve-cFU" secondAttribute="trailing" id="B3N-Od-yHe"/>
+                            <constraint firstItem="hwD-uL-4Wd" firstAttribute="leading" secondItem="VHo-ve-cFU" secondAttribute="leading" id="USs-Vj-qkn"/>
+                            <constraint firstItem="dKq-h7-9NL" firstAttribute="centerY" secondItem="VHo-ve-cFU" secondAttribute="centerY" constant="129" id="VRM-Id-3GK"/>
                             <constraint firstItem="dKq-h7-9NL" firstAttribute="centerX" secondItem="VHo-ve-cFU" secondAttribute="centerX" id="dUx-WX-4jz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VHo-ve-cFU"/>
@@ -285,7 +349,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O0X-lL-ujt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1810" y="134"/>
+            <point key="canvasLocation" x="1808.8" y="133.5832083958021"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="UeJ-Op-Fkg">
